# parallel_CBS

./: .gitignore  README.md  index.html  index.md  milestone.html  milestone.md  proposal.html  proposal.md
code/: CMakeLists.txt
code/include/: AStar.hpp  CBSSolver.hpp  HDAStar.hpp  MAPFGenerator.hpp  MAPFInstance.hpp  MAPFLoader.hpp  SolverUtils.hpp  TesterUtils.hpp
code/instances/: eval_coast.txt  eval_maze.txt  eval_maze2.txt  eval_paris.txt  eval_random.txt  eval_room.txt  min-sum-of-cost.csv  minimum.txt  test_0.txt  test_55.txt  test_56.txt  test_57.txt  test_60.txt  test_61.txt  test_62.txt  test_63.txt  test_64.txt
code/instances/evaluation/: evaluation_map.txt  evaluation_map_coast.txt  evaluation_map_maze2.txt  evaluation_map_random.txt  evaluation_map_room.txt  evaluation_maze-128-128-10.txt  evaluation_maze-128-128-10_n10_i0.txt  evaluation_random-32-32-10.txt  evaluation_random-32-32-10_n10_i0.txt  evaluation_random-32-32-20.txt  evaluation_random-32-32-20_n10_i0.txt  evaluation_room-64-64-16.txt  evaluation_room-64-64-16_n10_i0.txt  evaluation_room-64-64-8.txt  evaluation_room-64-64-8_n10_i0.txt
code/scripts/: animate_results.py  create_random_eval_instance.py  evaluate.py  timelines.py  visualize.py
code/src/: AStar.cpp  AddConstraints.cpp  CBSSolver.cpp  HDAStar_SAS.cpp  MAPFGenerator.cpp  MAPFLoader.cpp  evaluate.cpp  evaluateHDAStar.cpp  main.cpp  scaling.cpp  testAStar.cpp
code/test/: testAStar.cpp  testCBS.cpp  testHDAStar.cpp  testMAPFLoader.cpp
